# fastAPI-NextJS-todo-app

./: README.md
backend/: .env  pyproject.toml
backend/backend/: database.py  main.py  models.py
