[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["saadalamgir18 <saadalamgir18@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.112.0"
uvicorn = {extras = ["standard"], version = "^0.30.5"}
sqlmodel = "^0.0.21"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
